Updated styles for a fixed background for better viewing on mobile devices

--- a/assets/css/splash.css
+++ b/assets/css/splash.css
@@ -7,7 +7,7 @@ body {
 }
 
 body::after {
-	background: url("/assets/img/cosmic.png") no-repeat center center;
+	background: url("/assets/img/cosmic.png") no-repeat center center fixed;
 	background-size: cover;
 	opacity: 0.3;
 	content: "";
